Revert "Merge branch 'oceanic-apache' of https://github.com/lsiepel/openhab-addons into oceanic-apache"
This reverts commit 1c0d8ed353c068d95680d0d6f4e2c8fc5a6d3f07, reversing
changes made to dbdba4dae80a35f269095a4555fa3de41b2e9a23.