@@ -17,14 +17,15 @@ import static org.openhab.binding.meteoalerte.internal.MeteoAlerteBindingConstan
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.nio.charset.StandardCharsets;
 import java.time.ZonedDateTime;
+import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
-import org.openhab.binding.meteoalerte.internal.MeteoAlertIconProvider;
+import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.meteoalerte.internal.MeteoAlerteConfiguration;
 import org.openhab.binding.meteoalerte.internal.json.ApiResponse;
 import org.openhab.binding.meteoalerte.internal.json.ResponseFieldDTO.AlertLevel;
@@ -55,22 +56,27 @@ import com.google.gson.Gson;
  */
 @NonNullByDefault
 public class MeteoAlerteHandler extends BaseThingHandler {
-    private static final int TIMEOUT_MS = 30000;
     private static final String URL = "https://public.opendatasoft.com/api/records/1.0/search/?dataset=risques-meteorologiques-copy&"
             + "facet=etat_vent&facet=etat_pluie_inondation&facet=etat_orage&facet=etat_inondation&facet=etat_neige&facet=etat_canicule&"
             + "facet=etat_grand_froid&facet=etat_avalanches&refine.nom_dept=%s";
+    private static final int TIMEOUT_MS = 30000;
+    private static final String UNKNOWN_COLOR = "b3b3b3";
+    private static final Map<AlertLevel, String> ALERT_COLORS = Map.ofEntries(Map.entry(AlertLevel.GREEN, "00ff00"),
+            Map.entry(AlertLevel.YELLOW, "ffff00"), Map.entry(AlertLevel.ORANGE, "ff6600"),
+            Map.entry(AlertLevel.RED, "ff0000"), Map.entry(AlertLevel.UNKNOWN, UNKNOWN_COLOR));
+
+    private static final Map<AlertLevel, State> ALERT_LEVELS = Map.ofEntries(
+            Map.entry(AlertLevel.GREEN, DecimalType.ZERO), Map.entry(AlertLevel.YELLOW, new DecimalType(1)),
+            Map.entry(AlertLevel.ORANGE, new DecimalType(2)), Map.entry(AlertLevel.RED, new DecimalType(3)));
 
     private final Logger logger = LoggerFactory.getLogger(MeteoAlerteHandler.class);
-    private final MeteoAlertIconProvider iconProvider;
     private final Gson gson;
-
-    private Optional<ScheduledFuture<?>> refreshJob = Optional.empty();
+    private @Nullable ScheduledFuture<?> refreshJob;
     private String queryUrl = "";
 
-    public MeteoAlerteHandler(Thing thing, Gson gson, MeteoAlertIconProvider iconProvider) {
+    public MeteoAlerteHandler(Thing thing, Gson gson) {
         super(thing);
         this.gson = gson;
-        this.iconProvider = iconProvider;
     }
 
     @Override
@@ -82,17 +88,18 @@ public class MeteoAlerteHandler extends BaseThingHandler {
         logger.debug("config refresh = {}", config.refresh);
 
         updateStatus(ThingStatus.UNKNOWN);
-        queryUrl = URL.formatted(config.department);
-        refreshJob = Optional
-                .of(scheduler.scheduleWithFixedDelay(this::updateAndPublish, 0, config.refresh, TimeUnit.MINUTES));
+        queryUrl = String.format(URL, config.department);
+        refreshJob = scheduler.scheduleWithFixedDelay(this::updateAndPublish, 0, config.refresh, TimeUnit.MINUTES);
     }
 
     @Override
     public void dispose() {
         logger.debug("Disposing the Météo Alerte handler.");
-
-        refreshJob.ifPresent(job -> job.cancel(true));
-        refreshJob = Optional.empty();
+        ScheduledFuture<?> localJob = refreshJob;
+        if (localJob != null) {
+            localJob.cancel(true);
+        }
+        refreshJob = null;
     }
 
     @Override
@@ -112,10 +119,11 @@ public class MeteoAlerteHandler extends BaseThingHandler {
                 throw new IOException("Empty response");
             }
             updateStatus(ThingStatus.ONLINE);
-            updateChannels(Objects.requireNonNull(gson.fromJson(response, ApiResponse.class)));
+            ApiResponse apiResponse = gson.fromJson(response, ApiResponse.class);
+            updateChannels(Objects.requireNonNull(apiResponse));
         } catch (MalformedURLException e) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
-                    "Querying '%s' error : %s".formatted(queryUrl, e.getMessage()));
+                    String.format("Querying '%s' raised : %s", queryUrl, e.getMessage()));
         } catch (IOException e) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR, e.getMessage());
         }
@@ -127,7 +135,7 @@ public class MeteoAlerteHandler extends BaseThingHandler {
      * @param channelId the id identifying the channel to be updated
      */
     private void updateChannels(ApiResponse apiResponse) {
-        apiResponse.getRecords().findFirst().ifPresent(record -> record.getResponseFieldDTO().ifPresent(fields -> {
+        apiResponse.getRecords().findFirst().ifPresent((record) -> record.getResponseFieldDTO().ifPresent(fields -> {
             updateAlert(WIND, fields.getVent());
             updateAlert(RAIN, fields.getPluieInondation());
             updateAlert(STORM, fields.getOrage());
@@ -137,32 +145,38 @@ public class MeteoAlerteHandler extends BaseThingHandler {
             updateAlert(FREEZE, fields.getGrandFroid());
             updateAlert(AVALANCHE, fields.getAvalanches());
             updateAlert(WAVE, fields.getVagueSubmersion());
-            updateState(COMMENT, StringType.valueOf(fields.getVigilanceComment()));
+            updateState(COMMENT, new StringType(fields.getVigilanceComment()));
             fields.getDateInsert().ifPresent(date -> updateDate(OBSERVATION_TIME, date));
             fields.getDatePrevue().ifPresent(date -> updateDate(END_TIME, date));
         }));
     }
 
-    private void updateAlert(String channelId, AlertLevel value) {
-        State state = value != AlertLevel.UNKNOWN ? new DecimalType(value.ordinal()) : UnDefType.NULL;
-        if (isLinked(channelId)) {
-            updateState(channelId, state);
-        }
-
-        String channelIcon = channelId + "-icon";
-        if (isLinked(channelIcon)) {
-            InputStream icon = iconProvider.getIcon(channelId, state.toString());
-            if (icon != null) {
-                try {
-                    State result = new RawType(icon.readAllBytes(), "image/svg+xml");
-                    updateState(channelIcon, result);
-                } catch (IOException e) {
-                    logger.warn("Error getting icon for channel {} and value {} : {}", channelId, value,
-                            e.getMessage());
-                }
-            } else {
-                logger.warn("Null icon returned for channel {} and state {}", channelIcon, state);
+    private byte @Nullable [] getResource(String iconPath) {
+        ClassLoader classLoader = MeteoAlerteHandler.class.getClassLoader();
+        if (classLoader != null) {
+            try (InputStream stream = classLoader.getResourceAsStream(iconPath)) {
+                return stream != null ? stream.readAllBytes() : null;
+            } catch (IOException e) {
+                logger.warn("Unable to load ressource '{}' : {}", iconPath, e.getMessage());
             }
+        }
+        return null;
+    }
+
+    private void updateAlert(String channelId, AlertLevel value) {
+        String channelIcon = channelId + "-icon";
+        if (isLinked(channelId)) {
+            updateState(channelId, ALERT_LEVELS.getOrDefault(value, UnDefType.UNDEF));
+        }
+        if (isLinked(channelIcon)) {
+            State result = UnDefType.UNDEF;
+            byte[] bytes = getResource(String.format("picto/%s.svg", channelId));
+            if (bytes != null) {
+                String resource = new String(bytes, StandardCharsets.UTF_8);
+                resource = resource.replaceAll(UNKNOWN_COLOR, ALERT_COLORS.getOrDefault(value, UNKNOWN_COLOR));
+                result = new RawType(resource.getBytes(StandardCharsets.UTF_8), "image/svg+xml");
+            }
+            updateState(channelIcon, result);
         }
     }
 
