@@ -18,6 +18,7 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
@@ -62,7 +63,8 @@ public class NetatmoThingTypeProvider implements ThingTypeProvider {
     @Override
     public Collection<ThingType> getThingTypes(@Nullable Locale locale) {
         return ModuleType.AS_SET.stream().filter(mt -> mt != ModuleType.UNKNOWN)
-                .map(mt -> Optional.ofNullable(getThingType(mt.thingTypeUID, locale))).map(Optional::get).toList();
+                .map(mt -> Optional.ofNullable(getThingType(mt.thingTypeUID, locale))).map(Optional::get)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -93,7 +95,7 @@ public class NetatmoThingTypeProvider implements ThingTypeProvider {
 
     private List<ChannelGroupDefinition> getGroupDefinitions(ModuleType thingType) {
         return thingType.getGroupTypes().stream().map(groupType -> new ChannelGroupDefinition(toGroupName(groupType),
-                new ChannelGroupTypeUID(BINDING_ID, groupType))).toList();
+                new ChannelGroupTypeUID(BINDING_ID, groupType))).collect(Collectors.toList());
     }
 
     public static String toGroupName(String groupeTypeName) {
