@@ -15,13 +15,14 @@ package org.openhab.binding.ojelectronics.internal.services;
 import static org.openhab.binding.ojelectronics.internal.BindingConstants.*;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.ojelectronics.internal.OJCloudHandler;
-import org.openhab.binding.ojelectronics.internal.models.groups.GroupContentModel;
+import org.openhab.binding.ojelectronics.internal.models.groups.GroupContent;
 import org.openhab.core.config.discovery.AbstractDiscoveryService;
 import org.openhab.core.config.discovery.DiscoveryResultBuilder;
 import org.openhab.core.config.discovery.DiscoveryService;
@@ -38,11 +39,12 @@ import org.osgi.service.component.annotations.Component;
  */
 @NonNullByDefault
 @Component(service = DiscoveryService.class, immediate = true, configurationPid = "discovery.ojelectronics")
-public final class OJDiscoveryService extends AbstractDiscoveryService implements ThingHandlerService {
+public final class OJDiscoveryService extends AbstractDiscoveryService
+        implements DiscoveryService, ThingHandlerService {
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_OJCLOUD);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_OJCLOUD);
     private @Nullable OJCloudHandler bridgeHandler;
-    private @Nullable Collection<GroupContentModel> groupContents;
+    private @Nullable Collection<GroupContent> groupContents;
 
     /**
      * Creates a new instance of {@link OJDiscoveryService}
@@ -57,14 +59,14 @@ public final class OJDiscoveryService extends AbstractDiscoveryService implement
      *
      * @param groupContents Content from API
      */
-    public void setScanResultForDiscovery(List<GroupContentModel> groupContents) {
+    public void setScanResultForDiscovery(List<GroupContent> groupContents) {
         this.groupContents = groupContents;
     }
 
     @Override
     protected void startScan() {
         final OJCloudHandler bridgeHandler = this.bridgeHandler;
-        final Collection<GroupContentModel> groupContents = this.groupContents;
+        final Collection<GroupContent> groupContents = this.groupContents;
         if (groupContents != null && bridgeHandler != null) {
             groupContents.stream().flatMap(content -> content.thermostats.stream())
                     .forEach(thermostat -> thingDiscovered(bridgeHandler.getThing().getUID(), thermostat.serialNumber));
